--- a/PruebaNet8.APP/appsettings.json
+++ b/PruebaNet8.APP/appsettings.json
@@ -11,8 +11,8 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "EstaEsUnaLlaveSecretaParaJWTxdlol",
-    "Issuer": "http://localhost:5225/",
-    "Audience": "http://localhost:5225/",
+    "Issuer": "http://localhost/",
+    "Audience": "http://localhost/",
     "Subject": "SujetoPrueba"
   }
 }
