--- a/PruebaNet8.APP/appsettings.json
+++ b/PruebaNet8.APP/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "cadenaSQL": "Server=DESKTOP-UJISBLN\\SQLEXPRESS;DataBase=PruebaIdentityProyecto;Integrated Security=true;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "cadenaSQL": "Server=(tuServidor);Database=(tuBaseDeDatos);Integrated Security=true;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
